--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="urf-8">
         <title>Mateusz Bloch | Portfolio</title>
-        <meta name="description" content="This is Mateusz Bloch Portfolio Chec me on: ">
+        <meta name="description" content="This is Mateusz Bloch Portfolio Check me on: ">
         <meta name="author" content="Mateusz Bloch"> 
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/themify-icons.css"> 
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-lg-2">
                         <img src="assets/img/ntlk.png" class="img-fluid rounded-lg mb-4" alt="">
-                        <p>NTLK</p>
+                        <p>NLTK</p>
                     </div>
                     <div class="col-lg-2">
                         <img src="assets/img/jupyter.png" class="img-fluid rounded-lg mb-4" alt="">
@@ -101,9 +101,6 @@
                 <div class="row">
                     <div class="col-12 mb-5">
                         <h2>My Projects</h2>
-                    </div>
-                    <div class="col-12 mb-5">
-                        <h3>Data science</h3>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <article class="card bg-dark rounded-0 border-0">
@@ -134,7 +131,7 @@
                                 <h4 class="mb-3">NLP with Python Analyzing "War and Peace" Leo Tolstoy</h4>
                                 <p>Analysis of a book obtained by web scraping in jupyter notebooks.</p>
                                 <p>Used libs:</p>
-                                <p>- BeautifulSoup, ntlk, spaCy, matplotlib</p>
+                                <p>- BeautifulSoup, nltk, spaCy, matplotlib</p>
                                 <a href="https://nbviewer.org/github/mateusz-bloch/war_and_peace_analysis/blob/master/war_and_peace_analysis.ipynb" class="btn btn-primary ml-lg-4">Preview</a>
                                 <a href="https://github.com/mateusz-bloch/war_and_peace_analysis" class="btn btn-primary ml-lg-4">GitHub</a>
                             </div>
@@ -150,8 +147,8 @@
                 <div class="row">
                     <div class="col-12 mb-5">
                         <h2>Certification</h2>
-                        <h4>✔ Lorem ipsum dolor sit amet.<p>Lorem ipsum dolor sit amet.</p></h4>
-                        <h4>✔ Lorem ipsum dolor sit amet.</h4>
+                        <h4><a href="https://drive.google.com/file/d/1Pa6d3cgoPpVYZXyGsbJ1k4FhYWT_Qhs_/view?usp=sharing">✔ Cisco: Introduction to Internet of Things</a></h4>
+                        <h4><a href="https://drive.google.com/file/d/1RXw0zu5GblzmtjGzgcT5AbE6tBe9R_KY/view?usp=sharing">✔ Cisco: Cybersecurity Essentials</a></h4>
                     </div>
                 </div>
             </div>  
