--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                             <li class="nav-item"><a class="nav-link" href="#certification">Certification</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contact">Education</a></li>
                         </ul>
-                        <a href="#" class="btn btn-primary ml-lg-4">CV in PDF</a>
-                        <a href="#" class="btn btn-primary ml-lg-4">Contact</a>
+                        <a href="https://docs.google.com/document/d/1Oi8QrnIVGpLw8R5ooRJpvUNj4EMg4fdkN-7CDPRWlwE/edit?usp=sharing" class="btn btn-primary ml-lg-4">CV</a>
+                        <!-- <a href="#" class="btn btn-primary ml-lg-4">Contact</a> -->
                     </div>
                 </nav>
             </div>
