add second project

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <p>Pandas</p>
                     </div>
                     <div class="col-lg-2">
-                        <img src="assets/img/ntlk.png" class="img-fluid rounded-lg mb-4" alt="">
-                        <p>NLTK</p>
+                        <img src="assets/img/plotly.png" class="img-fluid rounded-lg mb-4" alt="">
+                        <p>plotly</p>
                     </div>
                     <div class="col-lg-2">
                         <img src="assets/img/jupyter.png" class="img-fluid rounded-lg mb-4" alt="">
@@ -91,6 +91,10 @@
                     <div class="col-lg-2">
                         <img src="assets/img/git.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Git</p>
+                    </div>
+                    <div class="col-lg-2">
+                        <img src="assets/img/arch.png" class="img-fluid rounded-lg mb-4" alt="">
+                        <p>Arch</p>
                     </div>
                 </div>  
             </div>
@@ -115,12 +119,14 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <article class="card bg-dark rounded-0 border-0">
-                            <img src="assets/img/python.png" alt="" class="card-img-top mb-4 rounded-0">
+                            <img src="assets/img/project2.png" alt="" class="card-img-top mb-4 rounded-0">
                             <div class="card-body">
-                                <h4 class="mb-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                                <a href="#" class="btn btn-primary ml-lg-4">Preview</a>
-                                <a href="#" class="btn btn-primary ml-lg-4">GitHub</a>
+                                <h4 class="mb-3">Apartments pricing in Warsaw</h4>
+                                <p>The website presents data on apartment prices in Warsaw. The data was extracted from the OLX portal using the web scraping method.</p>
+                                <p>Used libs:</p>
+                                <p>- plotly, pandas, flask, BeautifulSoup, AWS</p>
+                                <a href="http://3.67.207.232/" class="btn btn-primary ml-lg-4">Preview</a>
+                                <a href="https://github.com/mateusz-bloch/warsaw_apartments_prices" class="btn btn-primary ml-lg-4">GitHub</a>
                             </div>
                         </article>
                     </div>
