--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                             <div class="card-body">
                                 <h4 class="mb-3">Apartments pricing in Warsaw</h4>
                                 <p>The website presents data on apartment prices in Warsaw. The data was extracted from the OLX portal using the web scraping method.</p>
-                                <p>Used libs:</p>
-                                <p>- plotly, pandas, flask, BeautifulSoup, AWS</p>
+                                <p>Used tools:</p>
+                                <p>- MongoDB, dash, plotly, pandas, BeautifulSoup, AWS</p>
                                 <a href="http://3.67.207.232/" class="btn btn-primary ml-lg-4">Preview</a>
-                                <a href="https://github.com/mateusz-bloch/warsaw_apartments_prices" class="btn btn-primary ml-lg-4">GitHub</a>
+                                <a href="https://github.com/mateusz-bloch/warsaw_apartments_prices_analysis" class="btn btn-primary ml-lg-4">GitHub</a>
                             </div>
                         </article>
                     </div>
@@ -136,7 +136,7 @@
                             <div class="card-body">
                                 <h4 class="mb-3">NLP with Python Analyzing "War and Peace" Leo Tolstoy</h4>
                                 <p>Analysis of a book obtained by web scraping in jupyter notebooks.</p>
-                                <p>Used libs:</p>
+                                <p>Used tools:</p>
                                 <p>- BeautifulSoup, nltk, spaCy, matplotlib</p>
                                 <a href="https://nbviewer.org/github/mateusz-bloch/war_and_peace_analysis/blob/master/war_and_peace_analysis.ipynb" class="btn btn-primary ml-lg-4">Preview</a>
                                 <a href="https://github.com/mateusz-bloch/war_and_peace_analysis" class="btn btn-primary ml-lg-4">GitHub</a>
