--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <p>The website presents data on apartment prices in Warsaw. The data was extracted from the OLX portal using the web scraping method.</p>
                                 <p>Used tools:</p>
                                 <p>- MongoDB, dash, plotly, pandas, BeautifulSoup, AWS</p>
-                                <a href="http://3.67.207.232/" class="btn btn-primary ml-lg-4">Preview</a>
+                                <a href="http://3.67.207.232:8080" class="btn btn-primary ml-lg-4">Preview</a>
                                 <a href="https://github.com/mateusz-bloch/warsaw_apartments_prices_analysis" class="btn btn-primary ml-lg-4">GitHub</a>
                             </div>
                         </article>
