--- a/index.html
+++ b/index.html
@@ -45,17 +45,14 @@
         <section class="section pb-0" id="home">
             <div class="container">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-12">
                         <h1 class="display-1 font-weight-bold title mb-4"><strong>Hi!</strong> I’m Mateusz Bloch</h1>
-                    </div>
-                    <div class="col-3">
-                        <img src="assets/img/data.gif" class="img-fluid rounded-lg" alt="">
                     </div>
                     <div class="col-12">
                         <p class="h3 mb-5">A computer science <strong>student</strong>, who is intrested in <strong>data science</strong>, <strong>machine learning</strong> and <strong>economy</strong>.</p>
                         <ul class="list-inline social-icons">
                             <li class="list-inline-item"><a href="https://github.com/mateusz-bloch"><i class="ti-github"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="ti-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/m-bloch/"><i class="ti-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -72,9 +69,13 @@
                         <img src="assets/img/python.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Python3</p>
                     </div>
-                    <div class="col-lg-2">
+                    <!-- <div class="col-lg-2">
                         <img src="assets/img/tensorflow.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>TensorFlow</p>
+                    </div> -->
+                    <div class="col-lg-2">
+                        <img src="assets/img/numpy.png" class="img-fluid rounded-lg mb-4" alt="">
+                        <p>NumPy</p>
                     </div>
                     <div class="col-lg-2">
                         <img src="assets/img/pandas.png" class="img-fluid rounded-lg mb-4" alt="">
@@ -106,7 +107,7 @@
                     <div class="col-12 mb-5">
                         <h2>My Projects</h2>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- <div class="col-lg-4 col-sm-6 mb-4">
                         <article class="card bg-dark rounded-0 border-0">
                             <img src="assets/img/python.png" alt="" class="card-img-top mb-4 rounded-0">
                             <div class="card-body">
@@ -116,7 +117,7 @@
                                 <a href="#" class="btn btn-primary ml-lg-4">GitHub</a>
                             </div>
                         </article>
-                    </div>
+                    </div> -->
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <article class="card bg-dark rounded-0 border-0">
                             <img src="assets/img/project2.png" alt="" class="card-img-top mb-4 rounded-0">
@@ -201,7 +202,7 @@
                     <div class="col-12 text-center">
                         <ul class="list-inline social-icons mb-5">
                             <li class="list-inline-item"><a href="https://github.com/mateusz-bloch"><i class="ti-github"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="ti-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/in/m-bloch/"><i class="ti-linkedin"></i></a></li>
                         </ul>
                         <hr class="mx-auto border-default" style="width:90px">
                         <p class="mt-5">Copyright © 2022  <a href="mqbloch@gmail.com">Mateusz Bloch</a></p>
