another project added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#technologies">Technologies</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#project">Project</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="#certification">Certification</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contact">Education</a></li>
                         </ul>
@@ -65,7 +65,7 @@
                     <div class="col-12 mb-5">
                         <h2>Technologies I'm working with</h2>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/python.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Python3</p>
                     </div>
@@ -73,29 +73,33 @@
                         <img src="assets/img/tensorflow.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>TensorFlow</p>
                     </div> -->
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/numpy.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>NumPy</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/pandas.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Pandas</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/plotly.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>plotly</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/jupyter.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Jupyter</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/git.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Git</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                         <img src="assets/img/arch.png" class="img-fluid rounded-lg mb-4" alt="">
                         <p>Arch</p>
+                    </div>
+                    <div class="col-lg-1">
+                        <img src="assets/img/linux.png" class="img-fluid rounded-lg mb-4" alt="">
+                        <p>Linux</p>
                     </div>
                 </div>  
             </div>
@@ -107,17 +111,6 @@
                     <div class="col-12 mb-5">
                         <h2>My Projects</h2>
                     </div>
-                    <!-- <div class="col-lg-4 col-sm-6 mb-4">
-                        <article class="card bg-dark rounded-0 border-0">
-                            <img src="assets/img/python.png" alt="" class="card-img-top mb-4 rounded-0">
-                            <div class="card-body">
-                                <h4 class="mb-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
-                                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                                <a href="#" class="btn btn-primary ml-lg-4">Preview</a>
-                                <a href="#" class="btn btn-primary ml-lg-4">GitHub</a>
-                            </div>
-                        </article>
-                    </div> -->
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <article class="card bg-dark rounded-0 border-0">
                             <img src="assets/img/project2.png" alt="" class="card-img-top mb-4 rounded-0">
@@ -128,6 +121,20 @@
                                 <p>- MongoDB, dash, plotly, pandas, BeautifulSoup, AWS</p>
                                 <a href="http://3.67.207.232:8080" class="btn btn-primary ml-lg-4">Preview</a>
                                 <a href="https://github.com/mateusz-bloch/warsaw_apartments_prices_analysis" class="btn btn-primary ml-lg-4">GitHub</a>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <article class="card bg-dark rounded-0 border-0">
+                            <img src="assets/img/project_2.png" alt="" class="card-img-top mb-4 rounded-0">
+                            <div class="card-body">
+                                <h4 class="mb-3">Anime Recommendation System</h4>
+                                <p>Anime content based recommender in Jupyter Notebook,which 10 recommended anime for the given anime
+                                The data was extracted from MyAnimeList using the web scraping method. The number of records obtained was 5050. </p>
+                                <p>Used tools:</p>
+                                <p>- scikit-learn, numpy, pandas, BeautifulSoup, Jupyter Notebook</p>
+                                <a href="https://nbviewer.org/github/mateusz-bloch/anime_reccomendation_system/blob/master/reccomender.ipynb" class="btn btn-primary ml-lg-4">Preview</a>
+                                <a href="https://github.com/mateusz-bloch/anime_reccomendation_system" class="btn btn-primary ml-lg-4">GitHub</a>
                             </div>
                         </article>
                     </div>
